--- a/static/styles_index.css
+++ b/static/styles_index.css
@@ -1,44 +1,31 @@
-table{
-    border-collapse: collapse;
+@media (min-width: 768px) {
+  table{
     width: 100%;
     background-color: #ffffff;
-}
-th, td {
+  }
+  th, td {
     padding: 2px 8px; /* Top/Bottom: 2px , Left/Right: 8px*/
     border-bottom: 1px solid grey;
-}
-th {
+  }
+  th {
     color: #6c6d6f;
     background-color: #f6f7f8;
-}
-td {
+  }
+  td {
     background-color: #ffffff;
     color: #4b494a;
-}
-.home-three-elem-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 8px;
-}
-.dropdowns-containter{
-    background-color: #ffffff;
-    position: relative;
-}
-.dropdowns-content {
+  }
+  .dropdowns-content {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    min-width: max-content;
+    min-width: -moz-max-content;
     height: fit-content;
     padding: 16px;
     border: 1px solid #edeef0;
     color: black;
     border-radius: 8px;
     background-color: #ffffff;
-}
-.scorecards-data {
-    width: 50%;
-    margin: 0px 10px 0px 10px;
-    backdrop-filter: blur(5px);
+  }
 }
