--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LWDCC125HK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LWDCC125HK');
+  </script>
 <head>
     <title>IPL Sense - Result</title>
     <link rel="stylesheet" href="static/styles_result.css">
