+ Features: Graphs and Partnerships

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
         
-    <div class="row m-3">
+    <div class="row m-1">
       <div class="col-lg-2 col-12 mb-3">
         <div class="dropdowns-content">
           <form method="post" action="/redirect_to_scorecard">
@@ -90,7 +90,7 @@
           <table class="table table-sm table-striped" style="width: 100%; margin-bottom: 0;">
             <thead>
               <tr>
-                <th>Year</th>
+                <th class="px-1">Year</th>
                 <th>Final</th>
                 <th>Champion</th>
                 <th>Runner Up</th>
@@ -101,7 +101,7 @@
             <tbody>
               {% for data in finals_and_champs_df %}
                 <tr>
-                  <td>{{data.Year}}</td>
+                  <td class="px-1">{{data.Year}}</td>
                   <td>{{data.Final}}</td>
                   <td class="fw-bold">{{data['Champions']}}</td>
                   <td>{{data['Runner up']}}</td>
@@ -118,7 +118,7 @@
         <div class="border rounded text-wrap p-2" style="background-color: #ffffff;">
           <p class="fw-bold my-1">{{match_title}}, {{match_date}}, {{ground_info}}</p>
           <p class="my-1">{{toss_info}}</p>
-          <p class="my-1">Man of the Match - {{man_of_the_match}}</p>  <!-- Man of the match -->
+          <p class="my-1 fw-bold">Man of the Match - {{man_of_the_match}}</p>  <!-- Man of the match -->
           <p class="my-1">Result - {{result}}</p>
         </div>
 
@@ -310,13 +310,14 @@
         
         <div class="border rounded mt-2 mb-2" style="background-color: #ffffff;">
           <button class="btn text-start" style="width: 100%; background-color: #e3f2fd; margin: 0;">
-            <p class="font-weight-bold p-1" style="margin-block: 0;">Impact points</p>
+            <p class="font-weight-bold p-1" style="margin-block: 0;">Batting Impact points</p>
           </button>
           <div id="imp_pts">
             <table class="table table-sm mb-0">
               <thead>
                 <tr class="table-secondary">
                   <th class="px-2">Name</th>
+                  <th>Team</th>
                   <th>Runs</th>
                   <th>SR</th>
                   <th>Points</th>
@@ -326,6 +327,7 @@
                 {% for row in imp_pts %}
                 <tr>
                   <td class="px-2">{{ row['player name'] }}</td>
+                  <td>{{ row.team }}</td>
                   <td>{{ row.runs }}</td>
                   <td>{{ row.SR }}</td>
                   <td>{{ row.impact_points }}</td>
@@ -336,6 +338,113 @@
           </div>
         </div>
 
+        <div class="border rounded mt-2 mb-2" style="background-color: #ffffff;">
+          <button class="btn text-start" style="width: 100%; background-color: #e3f2fd; margin: 0;">
+            <p class="font-weight-bold p-1" style="margin-block: 0;">Bowling Impact points</p>
+          </button>
+          <div id="bow_imp_pts">
+            <table class="table table-sm mb-0">
+              <thead>
+                <tr class="table-secondary">
+                  <th class="px-2">Name</th>
+                  <th>Team</th>
+                  <th>Balls</th>
+                  <th>Wickets</th>
+                  <th>Points</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in bow_imp_pts %}
+                <tr>
+                  <td class="px-2">{{ row['player name'] }}</td>
+                  <td>{{ row.team }}</td>
+                  <td>{{ row.balls }}</td>
+                  <td>{{ row.wickets }}</td>
+                  <td>{{ row.impact_points }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="border rounded mt-2 mb-2" style="background-color: #ffffff;">
+          <button class="btn text-start" style="width: 100%; background-color: #e3f2fd; margin: 0;">
+            <p class="font-weight-bold p-1" style="margin-block: 0;">Partnerships - Innings 1</p>
+          </button>
+          <div id="ptnr_df1">
+            <table class="table table-sm mb-0">
+              <thead>
+                <tr class="table-secondary">
+                  <th class="px-2">Player 1 Runs</th>
+                  <th>Player 1 Balls</th>
+                  <th>Player 1 Name</th>
+                  <th class="fw-bold text-center">Partnership Runs</th>
+                  <th>Player 2 Name</th>
+                  <th>Player 2 Balls</th>
+                  <th>Player 2 Runs</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in ptnr_df1 %}
+                <tr>
+                  <td class="px-2">{{ row.player1_runs }}</td>
+                  <td>{{ row.player1_balls }}</td>
+                  <td>{{ row.player1 }}</td>
+                  <td class="fw-bold text-center">{{ row.partnershipRuns }}</td>
+                  <td>{{ row.player2 }}</td>
+                  <td>{{ row.player2_balls }}</td>
+                  <td>{{ row.player2_runs }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="border rounded mt-2 mb-2" style="background-color: #ffffff;">
+          <button class="btn text-start" style="width: 100%; background-color: #e3f2fd; margin: 0;">
+            <p class="font-weight-bold p-1" style="margin-block: 0;">Partnerships - Innings 2</p>
+          </button>
+          <div id="ptnr_df1">
+            <table class="table table-sm mb-0">
+              <thead>
+                <tr class="table-secondary">
+                  <th class="px-2">Player 1 Runs</th>
+                  <th>Player 1 Balls</th>
+                  <th>Player 1 Name</th>
+                  <th class="fw-bold text-center">Partnership Runs</th>
+                  <th>Player 2 Name</th>
+                  <th>Player 2 Balls</th>
+                  <th>Player 2 Runs</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for row in ptnr_df2 %}
+                <tr>
+                  <td class="px-2">{{ row.player1_runs }}</td>
+                  <td>{{ row.player1_balls }}</td>
+                  <td>{{ row.player1 }}</td>
+                  <td class="fw-bold text-center">{{ row.partnershipRuns }}</td>
+                  <td>{{ row.player2 }}</td>
+                  <td>{{ row.player2_balls }}</td>
+                  <td>{{ row.player2_runs }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <!-- <div class="border rounded mt-2 mb-2" style="background-color: #ffffff;">
+          <button class="btn text-start" style="width: 100%; background-color: #e3f2fd; margin: 0;">
+            <p class="font-weight-bold p-1" style="margin-block: 0;">Partnerships</p>
+          </button>
+          <div id="ptnrsh_figs">
+            <img src="data:image/png;base64,{{ ptnr_f1 }}" alt="Innings 1 Partnerships Runs">
+          </div>
+        </div> -->
+
         {% endif %}
       </div>
       
@@ -344,6 +453,12 @@
         {% if each_team_cumulative_score_per_over %}
           <div class="border rounded mb-2 overflow-hidden">
             <img src="data:image/png;base64,{{ each_team_cumulative_score_per_over }}" alt="Cumulative Runs Graph" style="width: 100%; max-height: min-content;">
+          </div>
+          <div class="border rounded mb-2 overflow-hidden">
+            <img src="data:image/png;base64,{{ i1_ov_runs }}" alt="Innings 1 Overs-Runs" style="width: 100%; max-height: min-content;">
+          </div>
+          <div class="border rounded mb-2 overflow-hidden">
+            <img src="data:image/png;base64,{{ i2_ov_runs }}" alt="Innings 2 Overs-Runs" style="width: 100%; max-height: min-content;">
           </div>
         {% endif %}
         <!-- <div class="border rounded p-2 mb-2" style="width: 100%; height: 300px; background-color: white;">
