--- a/templates/index.html
+++ b/templates/index.html
@@ -116,6 +116,9 @@
 
         {% if batting1 and bowling1 %}
         <div class="border rounded text-wrap p-2" style="background-color: #ffffff;">
+          <div class="row">
+
+          </div>
           <p class="fw-bold my-1">{{match_title}}, {{match_date}}, {{ground_info}}</p>
           <p class="my-1">{{toss_info}}</p>
           <p class="my-1 fw-bold">Man of the Match - {{man_of_the_match}}</p>  <!-- Man of the match -->
@@ -176,9 +179,13 @@
                 {% endfor %}
               </tbody>
             </table>
+            <div>   
+              &nbsp; <strong> Did not bat</strong> : {{dnb1}} 
+            </div>
+            <br>
             <div style="display: flex; justify-content: space-around;">
-              <p style="margin-block: 0;">Total - {{team1_score}} ({{innings1_overs}})</p>
-              <p style="margin-block: 0;">Target - {{target}}</p>
+              <p style="margin-block: 0;"> <strong>Total</strong> - {{team1_score}} ({{innings1_overs}})</p>
+              <p style="margin-block: 0;"> <strong>Target</strong> - {{target}}</p>
             </div>
             <table class="table table-sm mb-0">
               <tr class="table-secondary">
@@ -264,8 +271,12 @@
                 {% endfor %}
               </tbody>
             </table>
+            <div>   
+              &nbsp; <strong> Did not bat</strong> : {{dnb2}} 
+            </div>
+            <br>
             <div class="mt-0" style="display: flex; justify-content: space-around;">
-              <p style="margin-block: 0;">Total - {{team2_score}} ({{innings2_overs}})</p>
+              <p style="margin-block: 0;"><strong>Total</strong> - {{team2_score}} ({{innings2_overs}})</p>
             </div>
   
             <table class="table table-sm mb-0">
@@ -376,25 +387,21 @@
             <table class="table table-sm mb-0">
               <thead>
                 <tr class="table-secondary">
-                  <th class="px-2">Player 1 Runs</th>
-                  <th>Player 1 Balls</th>
-                  <th>Player 1 Name</th>
-                  <th class="fw-bold text-center">Partnership Runs</th>
-                  <th>Player 2 Name</th>
-                  <th>Player 2 Balls</th>
-                  <th>Player 2 Runs</th>
+                  <th class="px-2">Wicket No</th>
+                  <th>Player 1</th>
+                  <th>Player 2</th>
+                  <th class="fw-bold text-center">Partnership</th>
+                  <th>Player out</th>
                 </tr>
               </thead>
               <tbody>
                 {% for row in ptnr_df1 %}
                 <tr>
-                  <td class="px-2">{{ row.player1_runs }}</td>
-                  <td>{{ row.player1_balls }}</td>
-                  <td>{{ row.player1 }}</td>
-                  <td class="fw-bold text-center">{{ row.partnershipRuns }}</td>
-                  <td>{{ row.player2 }}</td>
-                  <td>{{ row.player2_balls }}</td>
-                  <td>{{ row.player2_runs }}</td>
+                  <td class="px-2">{{ row.Wicket }}</td>
+                  <td>{{ row.Player_1 }}</td>
+                  <td>{{ row.Player_2 }}</td>
+                  <td class="fw-bold text-center">{{ row.Partnership }}</td>
+                  <td>{{ row.player_out }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -410,25 +417,21 @@
             <table class="table table-sm mb-0">
               <thead>
                 <tr class="table-secondary">
-                  <th class="px-2">Player 1 Runs</th>
-                  <th>Player 1 Balls</th>
-                  <th>Player 1 Name</th>
-                  <th class="fw-bold text-center">Partnership Runs</th>
-                  <th>Player 2 Name</th>
-                  <th>Player 2 Balls</th>
-                  <th>Player 2 Runs</th>
+                  <th class="px-2">Wicket No</th>
+                  <th>Player 1</th>
+                  <th>Player 2</th>
+                  <th class="fw-bold text-center">Partnership</th>
+                  <th>Player out</th>
                 </tr>
               </thead>
               <tbody>
                 {% for row in ptnr_df2 %}
                 <tr>
-                  <td class="px-2">{{ row.player1_runs }}</td>
-                  <td>{{ row.player1_balls }}</td>
-                  <td>{{ row.player1 }}</td>
-                  <td class="fw-bold text-center">{{ row.partnershipRuns }}</td>
-                  <td>{{ row.player2 }}</td>
-                  <td>{{ row.player2_balls }}</td>
-                  <td>{{ row.player2_runs }}</td>
+                  <td class="px-2">{{ row.Wicket }}</td>
+                  <td>{{ row.Player_1 }}</td>
+                  <td>{{ row.Player_2 }}</td>
+                  <td class="fw-bold text-center">{{ row.Partnership }}</td>
+                  <td>{{ row.player_out }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -460,11 +463,132 @@
           <div class="border rounded mb-2 overflow-hidden">
             <img src="data:image/png;base64,{{ i2_ov_runs }}" alt="Innings 2 Overs-Runs" style="width: 100%; max-height: min-content;">
           </div>
+          <h5>Distribution of Runs - {{team1_name}}</h5>
+          <iframe srcdoc="{{ i1_runs }}" width="100%" height="375" frameborder="0" scrolling="no"></iframe>
+
+          <h5>Distribution of Runs - {{team2_name}}</h5>
+          <iframe srcdoc="{{ i2_runs }}" width="100%" height="375" frameborder="0" scrolling="no"></iframe>
+
+          <!-- <div class="border rounded mb-2 overflow-hidden">
+            <img src="data:image/png;base64,{{ i1_runs }}" alt="Innings 1 Runs distribution" style="width: 100%; max-height: min-content;">
+          </div>
+          <div class="border rounded mb-2 overflow-hidden">
+            <img src="data:image/png;base64,{{ i2_runs }}" alt="Innings 2 Runs distribution" style="width: 100%; max-height: min-content;">
+          </div> -->
         {% endif %}
         <!-- <div class="border rounded p-2 mb-2" style="width: 100%; height: 300px; background-color: white;">
           <p class="text-center" style="font-size: small;">Advertisement is going to displayed here</p>
         </div> -->
       </div>
     </div>
+
+    <footer class="bd-footer pb-3" style="background-color: #ffffff;">
+      <hr>
+      <div class="container">
+        <p class="fs-2 accordion-header">T20Sense Privacy Notice</p>
+        <p><br>Thank you for visiting T20Sense, a website that provides cricket match scorecards without collecting any personal information from its users. We are committed to protecting your privacy and ensuring that your browsing experience on our website remains secure. This Privacy Notice explains how we handle the limited data we may collect and outlines our commitment to safeguarding your privacy.</p>
+
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <p class="fs-4 accordion-header" id="headerInfoCollect">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privInfoCol" aria-expanded="true" aria-controls="privInfoCol">
+                Information We Collect
+              </button>
+            </p>
+            <div id="privInfoCol" class="accordion-collapse collapse show p-3" aria-labelledby="headerInfoCollect" data-bs-parent="#accordionExample">
+              <p>At T20Sense, we follow a strict policy of not collecting any personal information from our users. We do not require you to provide any personal details such as your name, email address, phone number, or location to access the cricket match scorecards,stats & other interesting information.</p>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <p class="fs-4 accordion-header" id="headerAutoColInfo">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privAutoColInfo" aria-expanded="true" aria-controls="privAutoColInfo">
+                Automatically Collected Information
+              </button>
+            </p>
+            <div id="privAutoColInfo" class="accordion-collapse collapse p-3" aria-labelledby="headerAutoColInfo" data-bs-parent="#accordionExample">
+              <p>We may collect certain non-personal information automatically as you browse our website. This information includes:</p>
+              <ol>
+                <li>
+                  <p><strong>Log Data: </strong>When you access T20Sense, our servers automatically record information that your browser sends. This may include your IP address, browser type, browser version, the pages you visit, the time and date of your visit, and other statistics.</p>
+                </li>
+                <li><p><strong>Cookies: </strong>We may use cookies, which are small data files stored on your device, to enhance your browsing experience. Cookies help us analyse how users interact with our website and improve its functionality. You can manage your cookie preferences through your browser settings.</p>
+                </li>
+              </ol>
+            </div>
+          </div>
+          
+          <div class="accordion-item">
+            <p class="fs-4 accordion-header" id="headerThirdPartyLink">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privThirdPartyLink" aria-expanded="false" aria-controls="privThirdPartyLink">
+                Third-party Links
+              </button>
+            </p>
+            <div id="privThirdPartyLink" class="accordion-collapse collapse p-3" aria-labelledby="headerThirdPartyLink" data-bs-parent="#accordionExample">
+              <p>T20Sense may contain links to third-party websites, such as cricket teams' official websites or relevant news sources. Please note that these websites have their own privacy policies, and we encourage you to review them before providing any personal information on those sites. We are not responsible for the privacy practices or content of these third-party websites.</p>
+            </div>
+          </div>
+          
+          <div class="accordion-item">
+            <p class="fs-4 accordion-header" id="headerDataSecurity">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privDataSecurity" aria-expanded="true" aria-controls="privDataSecurity">
+                Data Security
+              </button>
+            </p>
+            <div id="privDataSecurity" class="accordion-collapse collapse p-3" aria-labelledby="headerDataSecurity" data-bs-parent="#accordionExample">
+              <p>We take the security of your information seriously. While we strive to protect the data we collect, please be aware that no method of transmission over the internet or electronic storage is completely secure. We cannot guarantee the absolute security of your information.</p>
+            </div>
+          </div>
+          
+          <div class="accordion-item">
+            <p class="fs-4 accordion-header" id="headerPrivCHangeNotice">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#privChangeNotice" aria-expanded="true" aria-controls="privChangeNotice">
+                Changes to this Privacy Notice:
+              </button>
+            </p>
+            <div id="privChangeNotice" class="accordion-collapse collapse p-3" aria-labelledby="headerPrivCHangeNotice" data-bs-parent="#accordionExample">
+              <p>We may update this Privacy Notice from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. The updated version will be posted on our website, and the date of the latest revision will be indicated at the top of the notice.</p>
+            </div>
+          </div>
+
+          <br>
+
+          <!-- <p class="fs-2">Contact Us</p> -->
+          <p class="fs-4">Finally,</p>
+          <p>If you have any questions or concerns about this Privacy Notice or your interactions with T20Sense, you can contact us at [contact email address].<br>Thank you for choosing T20Sense. Enjoy browsing the cricket match scorecards without worrying about your privacy!</p>
+          <div>
+            <p class="my-0">Sincerely,</p>
+            <p class="my-0">T20Sense</p>
+            <p class="mt-0"><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="mailto:admin@cloudkarya.com">admin@cloudkarya.com</a></p>
+          </div>
+          <p>Last updated: 01-Sept-2023</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <p class="fs-5">Contact Us</p>
+            <p class="my-0">Email: <a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="mailto:admin@cloudkarya.com">admin@cloudkarya.com</a></p>
+            <p>Phone: <a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="tel:+1 4084217409">+1 408-421-7409</a></p>
+          </div>
+          <div class="col-md-4 text-center">
+            <p class="fs-5">Links</p>
+            <ul class="list-unstyled">
+              <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="/">Home</a></li>
+              <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="/">IPL</a></li>
+              <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="#">Info</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-end">
+            <p class="fs-5">Social Media</p>
+            <ul class="list-unstyled">
+                <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="#">Facebook</a></li>
+                <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="#">Twitter</a></li>
+                <li><a class="link-primary link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover" href="#">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
